[ci] More code cleanup using nio files